// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorState Action: EDITOR_CHANGE_HIDDEN_ITEM_LIST / Use-case: toggleItemVisibility -- successfully hide and unhide items 1`] = `
Object {
  "editor": Object {
    "activeMenus": Object {
      "closet": false,
      "inventory": true,
    },
    "backgroundImageName": "medium",
    "downloadName": "nikki",
    "downloaded": Set {},
    "hiddenItems": Set {
      10007,
    },
    "minimizedMenus": Object {
      "closet": false,
      "inventory": false,
    },
  },
}
`;

exports[`EditorState Action: EDITOR_CHANGE_HIDDEN_ITEM_LIST / Use-case: toggleItemVisibility -- successfully hide and unhide items 2`] = `
Object {
  "editor": Object {
    "activeMenus": Object {
      "closet": false,
      "inventory": true,
    },
    "backgroundImageName": "medium",
    "downloadName": "nikki",
    "downloaded": Set {},
    "hiddenItems": Set {
      10007,
      21305,
    },
    "minimizedMenus": Object {
      "closet": false,
      "inventory": false,
    },
  },
}
`;

exports[`EditorState Action: EDITOR_CHANGE_HIDDEN_ITEM_LIST / Use-case: toggleItemVisibility -- successfully hide and unhide items 3`] = `
Object {
  "editor": Object {
    "activeMenus": Object {
      "closet": false,
      "inventory": true,
    },
    "backgroundImageName": "medium",
    "downloadName": "nikki",
    "downloaded": Set {},
    "hiddenItems": Set {
      21305,
    },
    "minimizedMenus": Object {
      "closet": false,
      "inventory": false,
    },
  },
}
`;
